# KARA_PROJECT

./: .env.example  .env.supabase.example  .gitignore  .spectral.yaml  .yamllint  AI_ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_GA_1.0.md  CLAUDE-MCP-CONFIG.md  CLAUDE.md  CRITICAL_RULES.md  DEPLOYMENT_COMMUNICATION.md  DEPLOYMENT_NOTES_GA_1.0.md  DEPLOYMENT_SUMMARY.md  FINAL_VALIDATION_REPORT_20250927.md  KIS_CORE_V2_manifest.csv  KIS_CORE_V2_tree.txt  MCP_SETUP_GUIDE.md  PRACTICAL_AI_SOLUTION.md  PRODUCTION_CHECKLIST.md  PROJECT_MASTER_PLAN.md  SESSION_SUMMARY.md  SPEC_KIT_KICKOFF_v3.0.0_20240922.zip.sha256  SPEC_KIT_KICKOFF_v3.0.0_20240922_FINAL.zip.sha256  SUPABASE_SETUP.md  VALIDATION_SUMMARY_20250927.md  create-tables-api.js  create_tables.sql  detailed-layout-test.js  evidence_audit_sanitizer.py  evidence_policy.yaml  find_fastapi_main.py  frontend-kis-complete.html  frontend-kis.html  generate_simple_templates.py  generate_templates.py  karaproject_ngrok_app__jit_plugin.py  main.js  mcp-config.json  package-lock.json  (+10 more)
.claude/: settings.local.json
.meta/: READ_ME_FIRST.md  audit_summary_20250919_000429.json  audit_summary_20250919_004840.json  audit_summary_20250919_010455.json  auto_fix_brief_20250919_000429.md  cleanup_manifest_20250919_011805.md  code_contract_report_20250919_000429.md  code_contract_report_20250919_004230.md  code_contract_report_20250919_004840.md  code_contract_report_20250919_010455.md  codex_brief_ready.md  codex_patch_request.md  deployment_ready_20250919_003000.md  fastmcp_manifest_1758217591.md  fix4_final_result_20250919_014235.json  fix4_pre_snapshot_20250919_013042.md  fix4_result_20250919_013042.json  fix4_result_20250919_014208.json  gate_unlock_manifest_20250919_014235.md  integrity_report_20250918_2225.md  (+22 more)
api/: .coverage  .env.example  README.md  health.js  hello.py  index.py  pyproject.toml  test.py
api/db/: new_schema.sql  schema.sql  test_schema.sql
api/db/migrations/: 001_initial.sql  20250926_timestamptz.sql
api/src/kis_backend/: config.py  database.py  dependencies.py  exceptions.py  logging.py  main.py
api/src/kis_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/src/kis_backend/controllers/: __init__.py  ai_controller.py  catalog_controller.py  evidence_controller.py  governance_controller.py  health_controller.py  integrations_controller.py  quotes_controller.py
api/src/kis_backend/core/: config.py  database.py  logging.py
api/src/kis_backend/endpoints/: __init__.py  quotes.py
api/src/kis_backend/models/: __init__.py  base.py  core.py  quote.py
api/src/kis_backend/repositories/: agent_queue_repository.py  approval_repository.py  estimate_repository.py  evidence_repository.py  file_analysis_repository.py  file_guard_repository.py  knowledge_repository.py  mail_repository.py  quote_repository.py  settings_repository.py
api/src/kis_backend/routers/: __init__.py  ai_manager.py  calendar.py  erp.py  estimate.py  mail.py  orders.py
api/src/kis_backend/schemas/: __init__.py  ai.py  catalog.py  common.py  evidence.py  governance.py  integrations.py
api/src/kis_backend/services/: ai_service.py  catalog_service.py  estimate_service.py  evidence_service.py  governance_service.py  integration_service.py  quote_service.py
api/src/kis_backend/utils/: auth.py  request_id.py  time.py
api/tests/: conftest.py  test_ai.py  test_governance.py  test_health.py  test_quotes.py  test_quotes_create.py
mcp-servers/pdf-reader-mcp/: README.md  main.py  pyproject.toml  requirements.txt
mcp-servers/pdf-reader-mcp/src/: server.py
(+1259 files in other folders)
