[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kis-backend"
version = "0.3.0"
description = "KIS AI estimator backend service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "KIS Backend Team" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.24.0",
  "sqlmodel>=0.0.14",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.7",
  "structlog>=24.1.0",
  "rich>=13.7.1",
  "passlib[bcrypt]>=1.7.4",
  "pyjwt>=2.8.0",
  "email-validator>=2.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "aiosqlite>=0.19.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=4.1.0",
  "httpx>=0.27.0",
  "respx>=0.20.1",
  "faker>=25.0.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2"
]

[tool.uvicorn]
factory = false
app = "kis_backend.main:create_app"
host = "0.0.0.0"
port = 8080
reload = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = ["api/tests"]
